tests/errors/arguments/constants/bool_invalid_10.src
.IPPcode18
move GF@var true